maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:10: error: not found: value keepHandOnwall
    ang = ang + keepHandOnwall()
                ^